objects/Data_Load__c.object
<CustomObject>
    <fields>
        <fullName>Attribute10__c</fullName>
        <label>Attribute10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute11__c</fullName>
        <label>Attribute11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute12__c</fullName>
        <label>Attribute12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <label>Data Load</label>
    <nameField>
        <label>Data Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>